# PaperSight

./: .env.example  README.md  app.py  processor.py  pyproject.toml  requirements.txt
