[project]
name = "papersight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.5",
    "groq>=0.30.0",
    "langchain>=0.3.26",
    "pillow>=11.3.0",
    "pinecone>=7.3.0",
    "pymongo>=4.13.2",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.46.1",
]
